--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
-# dependencies
+# Dependencies
 /node_modules
 
-# production
+# Prod
 /build
 
-# misc
+# Other
 .vs/
 .vscode/
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
